--- a/liclipse/app/templates/admin_login.html
+++ b/liclipse/app/templates/admin_login.html
@@ -2,6 +2,17 @@
 {% block content %}
     {% for admin in admin %}
     <h1>Hello {{ admin.adminname }}, please login!</h1>
-    <p>This page is not important ATM.</p>
+    <form action="" method="post" name="login">
+      {{ form.hidden_tag() }}
+      <p>
+          Please enter your credentials:<br>
+          {{ form.credentials(size=80) }}<br>
+          {% for error in form.openid.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+          {% endfor %}<br>
+      </p>
+      <p>{{ form.remember_me }} Remember Me</p>
+      <p><input type="submit" value="Sign In"></p>
+     </form>
     {% endfor %}
 {% endblock %}
