--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -69,7 +69,16 @@
         </div>
         <div class="main">
             <div class="container">
-    
+                <hr>
+                {% with messages = get_flashed_messages() %}
+                  {% if messages %}
+                    <ul>
+                    {% for message in messages %}
+                        <li>{{ message }} </li>
+                    {% endfor %}
+                    </ul>
+                  {% endif %}
+                {% endwith %}
                 {% block content %}{% endblock %}
                 
             </div>
