--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -67,8 +67,14 @@
         <div class="header">
     
         </div>
-        <div class="main">
-            <div class="container">
+        <div class="container-fluid">
+          <div class="row-fluid">
+            <div class="span2">
+              <!--Sidebar content-->
+            </div>
+            <div class="span10">
+              <div class="main">
+                <div class="container">
                 <hr>
                 {% with messages = get_flashed_messages() %}
                   {% if messages %}
@@ -80,8 +86,10 @@
                   {% endif %}
                 {% endwith %}
                 {% block content %}{% endblock %}
-                
+                </div>
+              </div>
             </div>
+          </div>
         </div>
     </div>
 
