--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -70,7 +70,10 @@
         <div class="container-fluid">
           <div class="row-fluid">
             <div class="span2">
-              <!--Sidebar content-->
+              <p>content
+              content
+              content
+              menu</p>
             </div>
             <div class="span10">
               <div class="main">
