--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,15 +63,15 @@
         </div>
     </nav>
     <div class="header">
-            <p>contentcontentcontent</p>
+        <h1>contentcontentcontent</h1>
     </div>
     <div class="container-fluid">
-        <div class="row-fluid">
+        <div class="row">
             <div class="span2">
-                <p>content
+                <h3>content
                 content
                 content
-                menu</p>
+                menu</h3>
             </div>
             <div class="span10">
                 <div class="container">
