--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -68,10 +68,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="span2">
-                <h3>content
-                content
-                content
-                menu</h3>
+                <ul class="nav nav-stacked" id="sidebar">
+                  <li><a href="#sec0">Section 0</a></li>
+                  <li><a href="#sec1">Section 1</a></li>
+                  <li><a href="#sec2">Section 2</a></li>
+                  <li><a href="#sec3">Section 3</a></li>
+                  <li><a href="#sec4">Section 4</a></li>
+                </ul>
             </div>
             <div class="span10">
                 <div class="container">
