--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,7 +68,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="span2">
-                <ul class="nav nav-stacked nav-pills nav-pills-success" role="tablist" id="sidebar">
+                <ul class="nav nav-stacked nav-pills nav-pills-success" id="sidebar">
                   <li><a href="#sec0">Section 0</a></li>
                   <li><a href="#sec1">Section 1</a></li>
                   <li><a href="#sec2">Section 2</a></li>
