--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -65,7 +65,7 @@
     <div class="header">
         <h1>contentcontentcontent</h1>
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md3" id="leftCol">
                 <ul class="nav nav-pills nav-stacked  nav-pills-success">
