--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -68,13 +68,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md3" id="leftCol">
-                <ul class="nav nav-pills nav-stacked  nav-pills-success">
-                  <li><a href="#sec0">Section 0</a></li>
-                  <li><a href="#sec1">Section 1</a></li>
-                  <li><a href="#sec2">Section 2</a></li>
-                  <li><a href="#sec3">Section 3</a></li>
-                  <li><a href="#sec4">Section 4</a></li>
-                </ul>
+                <p>contentcontentcontent</p>
             </div>
             <div class="col-md-9">
                 <div class="container">
