--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,10 +67,10 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md3" id="leftCol">
+            <div class="span2">
                 <p>contentcontentcontent</p>
             </div>
-            <div class="col-md-9">
+            <div class="span10">
                 <div class="container">
                 <hr>
                 {% with messages = get_flashed_messages() %}
