--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,8 +65,8 @@
     <div class="header">
         <h1>contentcontentcontent</h1>
     </div>
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row-fluid">
             <div class="span2">
                 <p>contentcontentcontent</p>
             </div>
