--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -68,7 +68,8 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span2">
-                <p>contentcontentcontent</p>
+                <div class"nav nav-stacked">
+                </div>
             </div>
             <div class="span10">
                 <div class="container">
