--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,6 +69,11 @@
         <div class="row-fluid">
             <div class="span2">
                 <div class"nav nav-stacked">
+                    <li><a href="#sec0">Section 0</a></li>
+                    <li><a href="#sec1">Section 1</a></li>
+                    <li><a href="#sec2">Section 2</a></li>
+                    <li><a href="#sec3">Section 3</a></li>
+                    <li><a href="#sec4">Section 4</a></li>
                 </div>
             </div>
             <div class="span10">
