--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,7 +68,7 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span2">
-                <div class"nav nav-stacked">
+                <div class"nav nav-stacked" id="sidebar">
                     <li><a href="#sec0">Section 0</a></li>
                     <li><a href="#sec1">Section 1</a></li>
                     <li><a href="#sec2">Section 2</a></li>
