--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -33,6 +33,7 @@
     
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li class= {{ activenav1 }} ><a href="/about">News</a></li>
                     <li class= {{ activenav2 }} ><a href="/about">About</a></li>
                     <li class= {{ activenav3 }} ><a href="/contacts">Contacts</a></li>
                     <li class="dropdown">
@@ -65,8 +66,8 @@
     <div class="header">
         <h1>contentcontentcontent</h1>
     </div>
-    <div class="container-fluid">
-        <div class="row-fluid">
+    <div class="container">
+        <div class="row">
             <div class="span2">
                 <ul class"nav nav-stacked" id="sidebar">
                     <li><a href="#sec0">Section 0</a></li>
