--- a/liclipse/app/templates/base.html
+++ b/liclipse/app/templates/base.html
@@ -68,6 +68,24 @@
     </div>
     <div class="container">
         <div class="row">
+          <!--left-->
+          <div class="col-md-3" id="leftCol">
+            <ul class="nav nav-stacked" id="sidebar">
+              <li><a href="#sec0">Section 0</a></li>
+              <li><a href="#sec1">Section 1</a></li>
+              <li><a href="#sec2">Section 2</a></li>
+              <li><a href="#sec3">Section 3</a></li>
+              <li><a href="#sec4">Section 4</a></li>
+            </ul>
+          </div><!--/left-->
+          <!--right-->
+          <div class="col-md-9">
+          {% block content %}{% endblock %}
+          </div>
+        </div>
+    </div>
+    <!--<div class="container">
+        <div class="row-fluid">
             <div class="span2">
                 <ul class"nav nav-stacked" id="sidebar">
                     <li><a href="#sec0">Section 0</a></li>
@@ -94,6 +112,7 @@
             </div>
         </div>
     </div>
+    -->
 </body>
 
     <!--   Core JS Files   -->
