--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
     <link href="static/css/material-kit.css" rel="stylesheet"/>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
     <nav class="navbar navbar-success navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -66,15 +66,15 @@
     <div class="container">
         <div class="row">
           <!--left-->
-          <div class="col-md-3" id="leftCol">
-            <ul class="nav nav-stacked" id="sidebar">
+          <nav class="col-md-3" id="myScrollspy">
+            <ul class="nav nav-stacked">
               <li><a href="#sec0">Section 0</a></li>
               <li><a href="#sec1">Section 1</a></li>
               <li><a href="#sec2">Section 2</a></li>
               <li><a href="#sec3">Section 3</a></li>
               <li><a href="#sec4">Section 4</a></li>
             </ul>
-          </div><!--/left-->
+          </nav><!--/left-->
           <!--right-->
           <div class="col-md-9">
             {% block content %}{% endblock %}
