--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,8 +62,9 @@
         </div>
     </nav>
     <div class="wrapper">
-        <div class="header header-filter" style="background-image: url("static/img/city.jpg");">
+        <div class="header header-filter" style="background-image: url("https://images.unsplash.com/photo-1423655156442-ccc11daa4e99?crop=entropy&dpr=2&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1450");">
         </div>
+        <div class="main main-raised">
         <div class="container">
             <div class="row">
               <!--left-->
@@ -81,6 +82,7 @@
                 {% block content %}{% endblock %}
               </div>
             </div>
+        </div>
         </div>
     </div>
 </body>
