--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,20 +18,21 @@
     <!-- CSS Files -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet" />
     <link href="static/css/material-kit.css" rel="stylesheet"/>
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-success navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/index">{{ title }}</a>
             </div>
     
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class= {{ activenav1 }} ><a href="/about">News</a></li>
                     <li class= {{ activenav2 }} ><a href="/about">About</a></li>
@@ -65,10 +66,12 @@
         <div class="header header-filter" style="background-image: url("https://images.unsplash.com/photo-1423655156442-ccc11daa4e99?crop=entropy&dpr=2&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1450");">
         </div>
         <div class="main main-raised">
+            <div class="section">
         <div class="container">
             <div class="row">
               <!--left-->
-              <nav class="col-md-2" data-spy="affix" data-offset-top="340">
+              <div class="col-md-2">
+              <div class="fixed-section" data-spy="affix" data-offset-top="340">
                 <ul class="nav nav-stacked">
                   <li><a href="#sec0">Section 0</a></li>
                   <li><a href="#sec1">Section 1</a></li>
@@ -76,11 +79,12 @@
                   <li><a href="#sec3">Section 3</a></li>
                   <li><a href="#sec4">Section 4</a></li>
                 </ul>
-              </nav><!--/left-->
+              </div><!--/left-->
               <!--right-->
               <div class="col-md-8 col-md-offset-1">
                 {% block content %}{% endblock %}
               </div>
+            </div>
             </div>
         </div>
         </div>
