--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -79,7 +79,9 @@
                   <li><a href="#sec3">Section 3</a></li>
                   <li><a href="#sec4">Section 4</a></li>
                 </ul>
-              </div><!--/left-->
+              </div>
+              </div>
+              <!--/left-->
               <!--right-->
               <div class="col-md-8 col-md-offset-1">
                 {% block content %}{% endblock %}
