--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,8 +67,8 @@
         </div>
         <div class="main main-raised">
             <div class="section">
-        <div class="container">
-            <div class="row">
+        <div class="container-fluid">
+            <div class="row-fluid">
               <!--left-->
               <div class="col-md-2">
               <div class="fixed-section" data-spy="affix" data-offset-top="140">
