--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-success navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-col">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-doc">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                 </button>
