Introducing about,news,contact pages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
     
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class= {{ activenav1 }} ><a href="/about">News</a></li>
+                    <li class= {{ activenav1 }} ><a href="/news">News</a></li>
                     <li class= {{ activenav2 }} ><a href="/about">About</a></li>
                     <li class= {{ activenav3 }} ><a href="/contacts">Contacts</a></li>
                     <li class="dropdown">
