--- a/app/templates/admin_login.html
+++ b/app/templates/admin_login.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Hello {{ admin.adminname }}, please login!</h1>
+    <h1>Hello admin, please login!</h1>
     <form action="" method="post" name="login">
         {{ form.hidden_tag() }}
         <p>
-            Enter your nickname:<br>
-            {{ form.nickname(size=80) }}<br>
+            Enter your username:<br>
+            {{ form.username(size=40) }}<br>
             Enter your password:<br>
-            {{ form.password(size=80) }}<br>
+            {{ form.password(size=40) }}<br>
         </p>
         <p><input type="submit" value="Sign In"></p>
     </form>
+    <a href="/administration">Go to administration</a>
 {% endblock %}
