Admin login additions

--- a/app/templates/admin_login.html
+++ b/app/templates/admin_login.html
@@ -11,5 +11,5 @@
         </p>
         <p><input type="submit" value="Sign In"></p>
     </form>
-    <a href="/administration">Go to administration</a>
+    <p><a href="/administration">Go to administration</a></p>
 {% endblock %}
