Admin login additions

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,11 +52,9 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                    <a href="/admin_login">
-                        <button type="button" class="btn btn-default btn-fab btn-fab-mini btn-round" aria-label="/admin_login"  
-                            <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+                        <button type="button" class="btn btn-default btn-fab btn-fab-mini btn-round">
+                            <a href="/administration"><span class="glyphicon glyphicon-wrench"></span></a>
                         </button>
-                    </a>
                     </li>
                 </ul>
             </div>
