Admin login additions

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,11 +51,11 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                    <li><a href="/administration">
                         <button type="button" class="btn btn-default btn-fab btn-fab-mini btn-round">
-                            <a href="/administration"><span class="glyphicon glyphicon-wrench"></span></a>
+                            <span class="glyphicon glyphicon-wrench"></span>
                         </button>
-                    </li>
+                    </a></li>
                 </ul>
             </div>
         </div>
