Admin login additions

--- a/app/templates/administration.html
+++ b/app/templates/administration.html
@@ -2,5 +2,6 @@
 {% block content %}
 
 <p>In here will be forms to create articles and adjust the website
+<a href="/administration">hello</a>
 </p>
 {% endblock %}
