Adjustments to base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,11 +51,9 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/administration">
                         <button type="button" class="btn btn-default btn-fab btn-fab-mini btn-round">
-                            <span class="glyphicon glyphicon-wrench"></span>
+                            <a href="/administration"><i class="material-icons">wrench</i></a>
                         </button>
-                    </a></li>
                 </ul>
             </div>
         </div>
