--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                         <button type="button" class="btn btn-default btn-fab btn-fab-mini btn-round">
-                            <a href="/administration"><i class="material-icons">wrench</i></a>
+                            <i class="material-icons">wrench</i><a href="/administration">_</a>
                         </button>
                 </ul>
             </div>
