Adjustments to base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,7 +51,7 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <i class="material-icons">wrench</i><a href="/administration">_</a>
+                    <a href="/administration"><i class="material-icons">wrench</i></a>
                 </ul>
             </div>
         </div>
