--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,8 +67,8 @@
               <div class="col-md-2">
               <div class="fixed-section" data-spy="affix" data-offset-top="140">
                 <ul class="nav nav-stacked">
-                  <li><button class="btn btn-primary"><a href="#sec0">Section 0</a></button></li>
-                  <li><button class="btn btn-primary">Section 1</button></li>
+                  <li><button class="btn btn-primary"><a href="#sec0"><p>test text</p></a></button></li>
+                  <li><button class="btn btn-primary">TEST</button></li>
                   <li><a href="#sec2">Section 2</a></li>
                   <li><a href="#sec3">Section 3</a></li>
                   <li><a href="#sec4">Section 4</a></li>
