--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,7 +67,7 @@
               <div class="col-md-2">
               <div class="fixed-section" data-spy="affix" data-offset-top="140">
                 <ul class="nav nav-stacked">
-                  <li><span class="label label-default"><a href="#sec0">test text</a></span></li>
+                  <li><span class="label label-default"><a class="text-default" href="#sec0">test text</a></span></li>
                   <li><button class="btn btn-primary">TEST</button></li>
                   <li><a href="#sec2">Section 2</a></li>
                   <li><a href="#sec3">Section 3</a></li>
