--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,7 @@
     <link href="static/css/bootstrap.min.css" rel="stylesheet" />
     <link href="static/css/material-kit.css" rel="stylesheet"/>
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+    <link href="static/css/theme.css" rel="stylesheet"/>
 </head>
 
 <body>
