Trying editor 1st try

--- a/app/templates/administration.html
+++ b/app/templates/administration.html
@@ -4,4 +4,5 @@
 <p>In here will be forms to create articles and adjust the website
 <a href="/administration">hello</a>
 </p>
+<script type='text/javascript'>$('#editor').wysiwyg();</script>
 {% endblock %}
