--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,10 +16,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
     <!-- CSS Files -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <link href="static/css/bootstrap.min.css" rel="stylesheet" />
     <link href="static/css/material-kit.css" rel="stylesheet"/>
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
     <link href="static/css/theme.css" rel="stylesheet"/>
+    <script src="static/js/bootstrap-wysiwyg.js"></script>
 </head>
 
 <body>
