Trying editor 1st try

--- a/app/templates/administration.html
+++ b/app/templates/administration.html
@@ -4,5 +4,5 @@
 <p>In here will be forms to create articles and adjust the website, trying synchronization
 <a href="/administration">hello</a>
 </p>
-<div id="editor"> type='text/javascript'>$('#editor').wysiwyg();</script></div>
+<div id="editor"> <script type='text/javascript'>$('#editor').wysiwyg();</script></div>
 {% endblock %}
