--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -8,7 +8,7 @@
         <link href="../bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
-        <link href="static/css/style.css" rel="stylesheet" />
+        <link href="../css/style.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -93,7 +93,7 @@
         <script src="../bower_components/jquery.hotkeys/jquery.hotkeys.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="../bower_components/google-code-prettify/src/prettify.js"></script>
-        <script src="static/js/bootstrap-wysiwyg.js"></script>
+        <script src="../js/bootstrap-wysiwyg.js"></script>
         <script type='text/javascript'>
             $('#editor').wysiwyg();
             
