Trying editor 1st try

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,7 @@
               <div class="fixed-section" data-spy="affix" data-offset-top="140">
                 <ul class="nav nav-stacked">
                   <li><span class="label label-default"><h4 class="text-default"><a href="#sec0">test text</a></h4></span></li>
-                  <li><button class="btn btn-primary">TEST</button></li>
+                  <li><button class="btn btn-primary"><a href="#sec0">test text</a></button></li>
                   <li><a href="#sec2">Section 2</a></li>
                   <li><a href="#sec3">Section 3</a></li>
                   <li><a href="#sec4">Section 4</a></li>
