Adding first article

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,7 @@
                         <ul class="dropdown-menu">
                           <li><a href="#">Úvodem</a></li>
                           <li class="divider"></li>
-                          <li><a href="#">Matematika</a></li>
+                          <li><a href="/unlimitedmemory">Unlimited memory</a></li>
                           <li><a href="#">Fyzika</a></li>
                           <li><a href="#">Materiály</a></li>
                           <li class="divider"></li>
