--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,8 +68,8 @@
               <div class="col-md-2">
               <div class="fixed-section" data-spy="affix" data-offset-top="140">
                 <ul class="nav nav-stacked">
-                  <li><span class="label label-default"><h4 class="text-default"><a href="#sec0">test text</a></h4></span></li>
-                  <li><button class="btn btn-primary"><a href="#sec0">test text</a></button></li>
+                  <li><h4 class="text-default"><a href="#sec0">test text</a></h4></li>
+                  <li><a href="#sec0">Section 1</a></li>
                   <li><a href="#sec2">Section 2</a></li>
                   <li><a href="#sec3">Section 3</a></li>
                   <li><a href="#sec4">Section 4</a></li>
