Adding first article

--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>
+<h1 id="sec0">
     How to learn stuff
 </h1>
 <p>
@@ -23,11 +23,11 @@
     <br/>
     Do any of your excuses really enhance and empower your life?
 </p>
-<p>
+<p id="sec-conclusion">
     Mindmap of Unlimited memory:
 </p>
 <p>
-    WHY
+    <strong>WHY</strong>
     <br/>
     Každý krok by měl začít tímto slovem. Proč. Proč se chci danou dovednost
     naučit, co mi to dá? Posune mě dál? Sepišme si tedy každý list důvodů, za
@@ -50,7 +50,7 @@
     Nikdy není pozdě ani brzy, je však třeba začít hned nebo nikdy
     <br/>
     <br/>
-    BELIEFS
+    <strong>BELIEFS</strong>
     <br/>
     Jseš to čemu věříš, toto je velmi důležité si uvědomit, proto použij
     následující víry:
@@ -69,7 +69,7 @@
     Sebereflexe je proklatě důležitá
 </p>
 <p>
-    QUESTIONS AND INSIGHTS
+    <strong>QUESTIONS AND INSIGHTS</strong>
     <br/>
     V rámci sebereflexe je nutno si položit následující otázky. Člověk musí své
     víry testovat a rozšiřovat, jinak je uvězněn v jejich mezích. Nejvíce se mi
@@ -86,7 +86,7 @@
 <p>
     If you don´t like how things are, change it! You´re not a tree.
 </p>
-<h1>
+<h1 id="sec1">
     1. Koncentrace
 </h1>
 <p>
@@ -103,7 +103,7 @@
     video.
 </p>
 <h2>
-    1.1Váš vnitřní hlas
+    1.1 Váš vnitřní hlas
 </h2>
 <p>
     Samozřejmě, každý má svůj vnitřní hlas. Ten hlas často našeptává, a velmi
@@ -118,7 +118,7 @@
     špatné příkazy, nemůžete očekávat že se stanou dobré věci.
 </p>
 <h2>
-    1.2Multitasking
+    1.2 Multitasking
 </h2>
 <p>
     Největším nepřítelem koncetrace je multitaking. Multitasking je mýtus. Vždy
@@ -146,7 +146,7 @@
     zaseknete i tři hodiny a více).
 </p>
 <h2>
-    1.3Učte se se záměrem
+    1.3 Učte se se záměrem
 </h2>
 <p>
     Lidi bezhlavě čtou informace, očekávajíce že si je zapamatují. Takto to
@@ -200,7 +200,7 @@
     be genuinely interested in learning stuff
 </p>
 <h2>
-    1.4Přestaňte si dělat starosti
+    1.4 Přestaňte si dělat starosti
 </h2>
 <p>
     Jelikož nemáte psychotronické schopnosti, přestaňte si dělat starosti nad
@@ -215,7 +215,7 @@
     Chcete zlepšit svou koncentraci nebo ne? To je jediná otázka na kterou
     stojí odpovědět, zbytek je dělání si starostí.
 </p>
-<h1>
+<h1 id="sec2">
     2. Část druhá
 </h1>
 <p>
