--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -216,7 +216,7 @@
     stojí odpovědět, zbytek je dělání si starostí.
 </p>
 <h1 id="sec2">
-    2. Část druhá
+    2. Základy
 </h1>
 <p>
     Fotogenická paměť jak si ji mnoho lidí představuje neexistuje. Perfektní
@@ -238,6 +238,357 @@
     požadovaný informační blok. Proto je vhodnější v paměti ukládat obrazy,
     které se samy navádí aby se v naší mysli poskládaly celé. Budeme tedy pro
     záměry pamatování užívat představivost.
+</p>
+<p>
+    Čím více změníme informace v obrazy či filmy, tím více si zapamatujeme a
+    pochopíme. Proto budeme používat princip „SEE"
+</p>
+<h2>
+    2.1Princip SEE
+</h2>
+<p>
+    <strong>S</strong>
+    - Senses/Smysly: Musíme používat naše smysly abychom cokoliv dostali do
+    naší hlavy. Stejně tak si pomocí nich vybavíme uložené informace. Jako
+    příklad si představte ve své mysli kočku. Slyšte jak přede, když ji
+    hladíte, pozorujte ji jak vám leží na klíně, uciťte ten kočičí odér.
+    Nepředstavili jste si slovo kočka, zažili jste multismyslový vjem. Pokuste
+    se stejnou situaci znovu vybavit. Je to jednoduché však?
+</p>
+<p>
+    <strong>E</strong>
+    - Exaggeration/Přeháňka(:D): Co je jednodušší si zapamatovat? Normální
+    jahodu nebo takovou velikosti dvoupodlažního domu? Pokuste se vaše obrazy
+    tvoři odlišné od běžné reality. Nemusí se to týkat pouze velikosti. Jako
+    příklad oblečte banán do županu.
+</p>
+<p>
+    Snažte se vytvořit směšné objekty, nikde není napsáno že učení nemůže být
+    zábavné a vědomosti musí být statická složka s fakty. Užijte si to!
+</p>
+<p>
+    <strong>E</strong>
+    - Energize/Oživování: Dejte svým obrazům pohyb. Představte si výše zmíněný
+    banán jak cvičí Taekwondo. Snažte se činit své obrazy barevné, střeštěné, a
+    hlavně ne nudné. Použijte tanec, zpěv, mluvu, ohyb, protahování, skrut,
+    vlnění, let, cokoliv vás napadne. Vzpomeňte si na nezapomenutelné pohádky a
+    které pohyby se vám vryly nejvíce do paměti.
+</p>
+<p>
+    Když si čtete nebo posloucháte, využívejte princip SEE. Z osobní zkušenosti
+    jsem nedávno poslouchal audioknihu Mycelium. Díky tomuto sluchovému vjemu
+    jsem si v hlavě zkonstruoval celý svět, do kterého nás posluchače autorka
+    uvrhla. Díky skvělým výkonům herců jsem si dokázal představit jednotlivé
+    situace a postavy. Buďte naivní při vašich představách, zveličujte a
+    zkrášlujte, a pokud si chcete skutečně zapamatovat, domyslete si něco
+    vtipného. Nezapomeňte ze svých obrazů dělat filmy, pohyb je pro lidský
+    mozek nejlépe zapamatovatelný, přitahuje naši pozornost oproti statice.
+</p>
+<p>
+    Většina lidí takto přirozeně nemyslí, nevěšte hlavu, je to pohým tréninkem.
+    Lidský mozek se neustále obnovuje, je jen na vás zda-li stejně či jinak.
+    Čím více budete učívat svou představivost, tím více budete znát, dokážete
+    spojovat zdánlivě nespojitelné věci a ve své mysli tím vytvoříte síť na
+    kterou se budou chytat nové informace.
+</p>
+<p>
+    Jak ovšem převést abstraktní pojmy do obrazů s významem? Snažte se je
+    nahradit. Jako příklad dám např. slovo Washington. Představte si chlápka,
+    jenž umývá závaží o hmotnosti jedné tuny. Ze začátku to pro vás bude nové,
+    stejně jako je i pro mne, budeme muset investovat naši pozornost pro
+    vytvoření těchto obrazů/filmů. Pár příkladů pomocí angličtiny:
+</p>
+<p>
+    Japanese
+    <br/>
+    Chest is Mune (Mooneh) - Imagine money growing out of your chest.
+    <br/>
+    Door is To (Toe) - Imagine kicking yourself into a toe when passing through
+    the door.
+    <br/>
+    Carpet is Juutan (Jootan) - Imagine that you tan (sunbathe) on a carpet.
+    <br/>
+    Water is Mizu - Czech comes in handy, představte si mízu jak teče potoky a
+    řekami.
+    <br/>
+    Red is Aka - Imagine Red Ak-47 :D The crazier the better
+</p>
+<p>
+    Jak jistě chápete, občas vás bude omezovat možnost, kdy nebudete vědět jak
+    dané slovo nahradit. Je to úplně normální. Zkuste teď sami si udělat
+    asociace k následujícím slovům v závorce asociační nápověda:
+</p>
+<p>
+    Airport is Kuukou (Kuků)
+    <br/>
+    Person is Hito (Punch him in the face)
+    <br/>
+    Question is Shitsumon (Shit summon)
+</p>
+<p>
+    Pokud si pojmy spojíte s roztodivnými a šílenými představami, jen tak se
+    vám z hlavy nevypaří, ovšem je třeba je osvěžovat, to si ukážeme v dalších
+    kapitolách. Tuto pomůcku lze použít na vše.
+</p>
+<p>
+    Paměť není věcí která se vám stane, právě vy si vytváříte vzpomínky.
+    Dokážete přetvořit jakoukoli informaci na těco co dává smysl právě vám.
+    Proto neberte moje asociace doslova, pokud se vymyslíte lepší, užijte ji.
+    Užití principu SEE by mělo zlepšít vaši kreativitu, představivost, pamět i
+    humor.
+</p>
+<h1 id="sec3">
+    3. Techniky
+</h1>
+<p>
+    Máme tedy živé obrazy, jenomže kam je v mysli zařadit? Naše mysl se
+    rozděluje na tři kategorie. Krátkodobá, dlouhodobá a něco mezi tím. Dále
+    budu používat následující zkratky: SHT - short term memory, MTM - middle
+    term memory a LTM - long term memory.
+</p>
+<p>
+    Nyní se pokusme něco společně naučit.
+</p>
+<h2>
+    3.1Metoda CAR
+</h2>
+<p>
+    Představte si vaše rodinné auto, jistě jej dobře znáte a dokážete se v něm
+    pohybovat. Toto auto je součástí vaší LTM. Při jednotlivých předmětech
+    užijte metodu SEE.
+</p>
+<p>
+    Vražte červené jablko do přední masky auta, udělejte z něj jaguára vražením
+    mrkve do předku kapoty, na přední okno vám někdo hodil krajíc celozrnného
+    chleba, bojíte se že pokud použijte stěrače, poškodíte si stěrače, následně
+    nastrkejte do rádia a budíků sušené ovoce, pociťte jeho vůni a ovědomte si
+    že si nic nepustíte a ručička rychloměru se bude zasekávat a sušenou
+    pochutinu, jakmile si sednete za volant, pod sebou slyšíte čvachtání a
+    cítíte jak se vám šťáva z borůvek a jahod nasakuje do kalhot. Na svého
+    spolujezdce, který je tam určitě dal, začněte házet vejce které jsou
+    uloženy mezi sedadly, SEE, spolujezdec je celý od žloutků a skořápek.
+    Nemůžete otevřít zadní dveře díky tomu že je tam plno různorodých ořechů a
+    semínek, které dále přisypávate skrz okýnko. Pak si všimnete, že na střeše
+    máte masivní pomeranč, v životě jste větší neviděli. Jak se tam dostal to
+    je záhadou, ale line se zněj velmi silná vůně. Otevřete kufr, a to jste
+    neměli dělat. V kufru je totiž plno ryb a odér rybiny vás zasáhne naplno.
+    Když se sehnete k výfuku, vidíte že zněj roste brokolice a kapusta. V
+    neposlední řadě jsou vaše pneumatiky z batátů. No vážně, z batátů!
+</p>
+<p>
+    Nyní projděte skrz naskz vaše auto a zkuste vidět všechny věci které jsem
+    zmínil. Pokud se nějaký pojem neujal, vraťte se k němu a zkuste silnější
+    asociaci.
+</p>
+<p>
+    Co jsme se nyní společně naučili je 14 jídel jenž podporují vitalitu a
+    udržují vaši mysl aktivní a v pozoru. Ne jenomže tento list umíte postupně,
+    vy jej umíte i obráceně a na přeskáčku. Dokážete odpovědět na otázku co
+    máte na zadních sedadlech? A na čem jste to na sedadle řidiče seděli? Jak
+    jistě pozorujete, je to velmi jednoduché. Proč to tak tedy je?
+</p>
+<p>
+    Musíme si uvědomit, že jsme zkombinovali něco co již známe s novými
+    informacemi, neboli analyticky STM+LTM=MTM. Nové informace lze jednoduše
+    zachytávat na již uložené LTM. Použitím této metody také systematicky
+    organizujete informace, a tedy víte kde je hledat. Okamžitě si vybavíte
+    vaše auto a váš mozek již sám odvozuje co jste do něj dali a jak jste jej
+    jídlovitě vylepšili. Jelikož jste přidělili informacím jejich místo, máte v
+    hlavě pořádek a nemusíte dané informace lovit v moři.
+</p>
+<p>
+    Nyní přejdeme k abstraktním pojmům.
+</p>
+<p>
+    Naučme se Sedm návyků velmi efektních lidí. Když budete tyto pojmy nosit s
+    sebou, snadněji si můžete ověřit, zda-li se jimi řídíte. Nezapomeňte, že
+    čím více toho víte, tím snadněji se ještě více naučíte (SEE).
+</p>
+<p>
+    <img
+        width="605"
+        height="454"
+        src="static/img/CAR.jpg"
+    />
+</p>
+<p>
+    1. Proaktivita - Představte si profesionálního hráče golfu, který je
+    zároveň aktivní jako včela
+</p>
+<p>
+    2. Přemýšlejte nad koncem - Vaše mysl běží závod a přemýšlí kdy už bude v
+    cíli
+</p>
+<p>
+    3. Hlavní věci na první místo - Výherce závodu dáme na bednu na první místo
+</p>
+<p>
+    4. Win/Win - Vyhrát nemusí jen jeden, představte si více pohárů pro první
+    místo
+</p>
+<p>
+    5. Snažte se nejdřív porozumět, až pak být pochopen - Sedící člověk na
+    pláži se snaží porozumět neznámému okolí, až pak může dělat něco jiného
+</p>
+<p>
+    6. Spolupráce - Značka, jež balancuje na kraji automobilu musí použít
+    spolupráci všech svých smyslů
+</p>
+<p>
+    7. Nabruste si pilu (Bez dobrého nářadí se špatně dělají věci) - Představte
+    si ostrou pilu jak se zařezává do pneumatik automobilu
+</p>
+<p>
+    Snažte se použít co nejméně obrazů při zapamatování si nejvíce. Čím
+    jednodušší si to pro sebe uděláte, tím méně se budete cítit zavaleni novými
+    informace (pocit, že vám pukne hlava).
+</p>
+<p>
+    1,2,3 jsou vaše Osobní výhry: předek auta náleží pouze řidiči. 4,5,6 -
+    Veřejné výhry: Do svého auta dovolíte sednout i jiným lidem než vy. 7 je
+    mimo auto: Značka kontroluje, jak se auto na cestě ovládá.
+</p>
+<p>
+Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlTxC4QG8g">video</a> pro
+    vysvětlení jednotlivých pojmů.
+</p>
+<p>
+    V této kapitole jsme se tedy naučili 21 kousků informací, které nám pomůžou
+    na cestě k Unlimited Memory. Metoda CAR vám pomůže zorganizovat informace,
+    které patří k sobě avšak mají různé významy. Samozřejmě můžete používat
+    jakékoliv objekty ve vaší LTM, ať je to váš pokoj či dům, zahrada, vaše
+    okolí či město. Vyvarujte se ovšem jednotvárným celkům jako vícero poliček,
+    šuplíku či kartoték.
+</p>
+<h2>
+    3.2Pro zapamatování použijte své tělo
+</h2>
+<p>
+    „The music of your life is far better played with all the fingers of your
+    Multiple Intelligences performing their magic on the keyboard of your
+    existence" - Tony Buzan
+</p>
+<p>
+    Každý člověk má vícero druhů inteligencí, díky tomu je každý z nás
+    jedinečný a úžasný. Dobrá metoda pro zapamatování si těchto inteligencí je
+    tzv. Metoda těla. Budeme používat naše tělo pro zapamatování nových
+    informací. Nyní se tedy naučíme 10 druhů inteligencí. Tyto pojmy budou
+    abstraktní, tudíž budeme muset užít naší kreativitu pro vytvoření
+    dostatečných SEE asociací.
+</p>
+<p>
+    V chodidlech uložíme Kreativní inteligenci. Představte si že stojíte na
+    rozsvěcené žárovce (taková ta jež se používá pro znázornění nápadu), je
+    velmi žhavá poskakujete na ni a pálí vám vaše chodidla.
+</p>
+<p>
+    Osobní inteligence se nachází ve vašich kolenou, je to zodpovědnost.
+    Představte si, že pokud musíte nějakou osobu nakopnout, budete za to
+    zodpovědni.
+</p>
+<p>
+    Na vašich stehnech se pořádá seznamovací párty, je to zosobnění vaší
+    Sociální inteligence, opravdu si představte DJ pult a létající nafukovací
+    zvířata nad davem na vašich stehnech.
+</p>
+<p>
+    Následující inteligenci uložíme do vašeho pasu. Bude to Spirituální
+    inteligence. Představte si že kolem pasu vám jezdí papež v papamobilu nebo
+    Ouroboros se vám neustále obtáčí kolem pasu. Nyní si zopakujte všechny
+    dosud uložené inteligence. Kreativní, Osobní, Sociální, Spirituální.
+</p>
+<p>
+    Dále je vaše Fyzická inteligence. Uložte ji do břicha, představte si že vám
+    je špatně a fyzicky se tedy necítíte dobře nebo použijte pozitivní obraz,
+    kdy po fyzickém cvičení budete mít na břiše dokonalou vánočku.
+</p>
+<p>
+    V levé ruce uložte Smyslovou inteligenci. Levou rukou si utírejte nos,
+    mněte si oči a strčte si prst do ucha.
+</p>
+<p>
+    V pravé ruce bude vaše Sexuální inteligence. Zde si vymyslete co uznáte za
+    vhodné.
+</p>
+<p>
+    Takže máme Kreativní, Osobní, Sociální, Spirituální, Fyzickou, Smyslovou a
+    Sexuální inteligenci.
+</p>
+<p>
+    Nyní k vašim ústům přiřadíme Verbální inteligenci. Když můžete, pomožte si
+    jednoduchostí, ale stejně použijte metodu SEE.
+</p>
+<p>
+    Na vašem nose je prázdný prostor, ke kterému se blíží vesmírná loď
+    (spaceship), na váš nos následně přistane. Toto je prostor pro vaši
+    Prostorovou inteligenci.
+</p>
+<p>
+    Vaše vlasy se zakrucují a vytvářejí algebraické vzorce, kroutí se do nul,
+    šestek a devítek, tvoří smyčky a kruhy. Zde uložte vaši Numerickou
+    inteligenci.
+</p>
+<p>
+    Nyní si zopakujme a doplňme náš Body List:
+</p>
+<p>
+    <h4>Kreativní a Emoční inteligence</h4> - vaše nohy vytváří pohyb kreativní způsobem
+    a při běhu se cítite emočně jinak než když ležíte
+</p>
+<p>
+    1. Kreativní inteligence
+</p>
+<p>
+    2. Osobní inteligence
+</p>
+<p>
+    3. Sociální inteligence
+</p>
+<p>
+    4. Spirituální inteligence
+</p>
+<p>
+    <h4>Tělesné inteligence</h4> - jsou lokalizovány na největší části vašeho těla,
+    torzu
+</p>
+<p>
+    5. Fyzická inteligence
+</p>
+<p>
+    6. Smyslová inteligence
+</p>
+<p>
+    7. Sexuální inteligence
+</p>
+<h4>
+    Tradiční Inteligence spojené s IQ
+</h4>
+<p>
+    8. Verbální inteligence
+</p>
+<p>
+    9. Prostorová inteligence
+</p>
+<p>
+    10. Numerická inteligence
+</p>
+<p>
+    V dnešní době inteligence je velmi důležité věděť o vašich úžasných
+    inteligencích. Na vaše tělo se budou velmi snadno nabalovat další zmínky a
+    jednoduše si je dáte do souvislostí. Například když se někdo zmíní o IQ
+    testech, hned si vzpomenete že tyto testu ohodnocují pouze tři inteligence
+    které máte uloženy na své hlavě.
+</p>
+<p>
+    Mnoho znás bylo naučeno že je buď chytrá nebo hloupá. Nyní však můžete
+    udělat analýzu vaší osobnosti, za mě třeba vím že mám rezervy ve Verbální a
+    Sociální inteligenci.
+</p>
+<p>
+    Metodu těla lze užít na vše od nákupních seznamů až po učení se na zkoušky.
+    Důležité je však vždy užít metodu SEE, pociťujte, přehánějte a rozpohybujte
+    vaše informace, a to nejlépe ještě nějakou humornou cestou. Můžete mít své
+    informace ve vlastních rukou.
 </p>
 
 
