--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -532,7 +532,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     Nyní si zopakujme a doplňme náš Body List:
 </p>
 <p>
-    <h4>Kreativní a Emoční inteligence</h4> - vaše nohy vytváří pohyb kreativní způsobem
+    <h4><strong>Kreativní a Emoční inteligence</strong></h4> - vaše nohy vytváří pohyb kreativní způsobem
     a při běhu se cítite emočně jinak než když ležíte
 </p>
 <p>
@@ -548,7 +548,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     4. Spirituální inteligence
 </p>
 <p>
-    <h4>Tělesné inteligence</h4> - jsou lokalizovány na největší části vašeho těla,
+    <h4><strong>Tělesné inteligence</strong></h4> - jsou lokalizovány na největší části vašeho těla,
     torzu
 </p>
 <p>
@@ -561,7 +561,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     7. Sexuální inteligence
 </p>
 <h4>
-    Tradiční Inteligence spojené s IQ
+    <strong>Tradiční Inteligence spojené s IQ</strong>
 </h4>
 <p>
     8. Verbální inteligence
