--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,9 +72,9 @@
                   <li><a href="#sec1">Section 1</a></li>
                   <li><a href="#sec2">Section 2</a></li>
                   <li><a href="#sec3">Section 3</a></li>
-                  {{% for topic in topics %}}
-                    <li><a href="#sec">{{ topic }}</a></li>
-                  {{% endfor %}}
+                  {% for topics in topics %}
+                    <li><a href="#sec{{ topic[loop.index0 + 1 }}">{{ topics }}</a></li>
+                  {% endfor %}
                   <li><a href="#sec-conclusion">Section 4</a></li>
                 </ul>
               </div>
