--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -72,10 +72,8 @@
                   <li><a href="#sec1">Section 1</a></li>
                   <li><a href="#sec2">Section 2</a></li>
                   <li><a href="#sec3">Section 3</a></li>
-                  {% for topics in topics %}
-                    <li><a href="#sec{{ topic[loop.index0 + 1 }}">{{ topics }}</a></li>
-                  {% endfor %}
-                  <li><a href="#sec-conclusion">Section 4</a></li>
+                  
+                                   <li><a href="#sec-conclusion">Section 4</a></li>
                 </ul>
               </div>
               </div>
